test/e2e/testdata/authorization-client-ip-trusted-cidrs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-authorization-client-ip-trusted-cidr-1
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /protected3
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-authorization-client-ip-trusted-cidr-2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /protected4
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authorization-client-ip-trusted-cidr-1
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-authorization-client-ip-trusted-cidr-1
  authorization:
    defaultAction: Allow
    rules:
    - name: "deny-location-1"  # First matching rule is applied, so 192.168.1.0/24 will be denied
      action: Deny
      principal:
        clientCIDRs:
        - 192.168.1.0/24
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authorization-client-ip-trusted-cidr-2
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-authorization-client-ip-trusted-cidr-2
  authorization:
    defaultAction: Deny
    rules:
    - action: Allow
      principal:
        clientCIDRs:
        - 10.0.2.0/24
---
# This is a client traffic policy that enables client IP detection using the XFF header.
# So, the client IP can be detected from the XFF header and used for authorization.
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: enable-client-ip-detection-trusted-cidr
  namespace: gateway-conformance-infra
spec:
  clientIPDetection:
    xForwardedFor:
      trustedCidrs:
      - "172.16.0.0/12"
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: same-namespace
